# quark

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: quark.yml
hack/: mk_all.sh
scripts/: mkbundle.sh  mkkernel.sh  mkrootfs.sh
src/: config.rs  helper.rs  main.rs
src/cli/: build.rs  mod.rs  run.rs
src/quardle/: mod.rs
tools/: mkinitramfs.sh
