[package]
name = "quark"
version = "0.1.0"
edition = "2021"
authors = ["Polytech Montpellier - DevOps"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
log = "0.4.16"
